tests/NormalTests/paczka1/small_fuzzy/74157464.err
Error in line 14: kivJ S273 65,2
Error in line 16: S448 S448 75,61
